fix: nginx conf (#24)
* fix: nginx conf

* fix: nginx conf

* fix: nginx conf

* fix: nginx conf

* fix: nginx conf

* revert: github ci

* fix: remove deployment stage as it's not possible for azure

* feat: update openapi.yaml

* fix: add more filter values to cars (#25)
