# CarRentalService/CarRentalService.Web/Models/DTOs/CarFilterDto.cs
@@ -1,9 +1,13 @@
+using CarRentalService.Data.Entities;
+
 namespace CarRentalService.Models.DTOs;
 
 public class CarFilterDto
 {
     public string? CarManufacturer { get; set; }
     public string? CarModel { get; set; }
+    public int? Year { get; set; }
+    public CarStatus? Status { get; set; }
     public DateTime? PickupDate { get; set; }
     public DateTime? DropoffDate { get; set; }
 }
